it5-2 almost done. Intermediate commit - missing correct weapon handling